<resources>
    <string name="app_name">DDUConnect</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_t_and_c">Privacy Policy</string>
    <string name="menu_editors_desk">From the Editors Desk</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_convocation">Convocation</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_meet_team">Meet our Team</string>
    <string name="title_activity_post">Post</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_post_info">PostInfo</string>
    <string name="editorsdeskcontent">
        What is that one thought which haunts you when you enter places completely ...</string>
    <string name="from_the_editors_desk">From The Editors Desk</string>
    <string name="next">NEXT</string>
    <string name="skip">BACK</string>
    <string name="start">LET\'S START</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">DDU Connect is a platform by the students, for the students which aims at connecting people.</string>
    <string name="slide_2_title">Features and Updates</string>
    <string name="slide_2_desc">Write, Upload and Share "\n"
	Save your favorite articles "\n"
	Stay updated with latest happenings of DDU</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="title_activity_tand_c">Privacy Policy</string>
    <string name="tandc_text">
       DDUConnect Privacy Policy
DDUConnect Team built the DDUConnect app as a Free app. This SERVICE is provided by DDUConnect Team at no cost and is intended for use as is.
This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service.
We will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at DDUConnect unless otherwise defined in this Privacy Policy.
Information Collection and Use
For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request is not used by us except for recognition of the content provided by the user.
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
• Google Play Services
• Wordpress
Cookies
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
DDUConnect Privacy Policy
Service Providers
We may employ third-party companies and individuals due to the following reasons:
• To facilitate our Service;
• To provide the Service on our behalf;
• To perform Service-related services; or
• To assist us in analyzing how our Service is used.
We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
Security
We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
Links to Other Sites
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
Changes to This Privacy Policy
We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
Contact Us
If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at dduconnect.com.
    </string>
    <string name="slide_5_title">Privacy Policy</string>
    <string name="slide_5_desc">Under the mingled branches of trees.
        The blue and bright moon is soothing my sight
        And also taking me away from all the worries.
        The peaceful rush of birds toward their nest
        Seems to me like a home-coming fest.
        This place, where I’m lying, is encircled by the calmness of paradise.
        Also, with peace in the heart everyone looks nice and wise.
        Enjoying the symphonic serenity everyone went calm.
        This symphony also makes the cockles of my heart warm.
        At the end, everyone went to sleep with peace.
        So that tomorrow they can rise again with an ease.
        The struggling day turned into peaceful evening and then to night.
        With first rays of sunlight for a peaceful life again begins the fight.Under the mingled branches of trees.
        The blue and bright moon is soothing my sight
        And also taking me away from all the worries.
        The peaceful rush of birds toward their nest
        Seems to me like a home-coming fest.
        This place, where I’m lying, is encircled by the calmness of paradise.
        Also, with peace in the heart everyone looks nice and wise.
        Enjoying the symphonic serenity everyone went calm.
        This symphony also makes the cockles of my heart warm.
        At the end, everyone went to sleep with peace.
        So that tomorrow they can rise again with an ease.
        The struggling day turned into peaceful evening and then to night.
        With first rays of sunlight for a peaceful life again begins the fight.Under the mingled branches of trees.
        The blue and bright moon is soothing my sight
        And also taking me away from all the worries.
        The peaceful rush of birds toward their nest
        Seems to me like a home-coming fest.
        This place, where I’m lying, is encircled by the calmness of paradise.
        Also, with peace in the heart everyone looks nice and wise.
        Enjoying the symphonic serenity everyone went calm.
        This symphony also makes the cockles of my heart warm.
        At the end, everyone went to sleep with peace.
        So that tomorrow they can rise again with an ease.
        The struggling day turned into peaceful evening and then to night.
        With first rays of sunlight for a peaceful life again begins the fight.</string>
    <string name="file_name_device_info" translatable="false">deviceInf.txt</string>
    <string name="file_name_device_log" translatable="false">deviceLog.txt</string>
    <string name="feedback_mail_subject">Feedback of %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="your_input">Write your feedback</string>
    <string name="send_feedback">Send</string>
    <string name="from" translatable="false">From:</string>
    <string name="please_write">Please write something.</string>
    <string name="send_feedback_two">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="select_image">+ Add Screenshot</string>
    <string name="click_again">Click again to change the image</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="ok">OK</string>
    <string name="system_info">System Info</string>
    <string name="info_fedback_legal_start">"Your "</string>
    <string name="info_fedback_legal_system_info">"system info "</string>
    <string name="info_fedback_legal_and">"and "</string>
    <string name="info_fedback_legal_log_data">"log data "</string>
    <string name="info_fedback_legal_will_be_sent">will be sent to %s</string>
    <string name="space">" "</string>
    <string name="title_activity_about_app">AboutApp</string>
</resources>