<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_thirty"
                android:layout_marginTop="@dimen/margin_thirty"
                android:layout_marginRight="@dimen/margin_thirty"
                android:gravity="top|start"
                android:hint="@string/your_input"
                android:minLines="5" />


            <FrameLayout
                android:id="@+id/selectImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="@dimen/margin_thirty"
                android:layout_marginTop="@dimen/margin_thirty"
                android:layout_marginRight="@dimen/margin_thirty"
                android:background="@color/grey"
                android:clickable="true"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/selectedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:id="@+id/selectContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/select_image"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_insert_photo_black_48dp" />

                </LinearLayout>


            </FrameLayout>

            <TextView
                android:id="@+id/info_legal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_thirty_two"
                android:layout_marginTop="@dimen/margin_thirty_two"
                android:layout_marginRight="@dimen/margin_thirty_two" />

            <Button
                android:id="@+id/submitSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_thirty"
                android:text="@string/send_feedback" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageup"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="-0.6dp"
            android:foreground="@drawable/path_33"
            app:srcCompat="@drawable/transperentback" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>